# HydraLLM

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json  server.js  start.bat  start.ps1  start.sh
.github/workflows/: build-binaries.yml  docker.yml
assets/: app-core.js  app.css  app.js  index.html
assets/chunks/: AnimatedGlyph.js  App.js  DashboardPage.js  FailoverChainsPage.js  LiveStatus.js  LiveStatusPage.js  LogsPage.js  ModelStatsPage.js  ModelTestsPage.js  ProvidersPage.js  ProxyEndpointsPage.js  SharedLiveStatusApp.js  arrow-right.js  circle-alert.js  circle-check.js  circle-x.js  eye.js  gauge.js  globe.js  plus.js  search.js  trash-2.js  triangle-alert.js
data/: config.example.json
deploy/: README.md
deploy/compose/: .env.example  docker-compose.yml
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
public/: index.html
scripts/: copy-ui.mjs
src/: admin.rs  auth.rs  circuit.rs  config.rs  main.rs  model_source.rs  proxy.rs  stats.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  store.tsx  types.ts
ui/src/components/: AnimatedGlyph.tsx  Dashboard.tsx  FailoverChains.tsx  LiveStatus.tsx  Loading.tsx  Login.tsx  Logs.tsx  ModelStats.tsx  ModelTests.tsx  Providers.tsx  ProxyEndpoints.tsx  Settings.tsx  Sidebar.tsx
