[package]
name = "hydrallm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance OpenAI-compatible LLM failover proxy."

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "json"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
constant_time_eq = "0.3"
dashmap = "6"
futures-util = "0.3"
http-body-util = "0.1"
mime_guess = "2"
mimalloc = { version = "0.1", optional = true }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "time", "sync", "net"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
